--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 			<version>1.2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>pt.quintans.mda.transformers</groupId>
+			<groupId>pt.quintans</groupId>
 			<artifactId>mda-enterprise-transformer</artifactId>
 			<version>${transformer.version}</version>
 		</dependency>
@@ -34,9 +34,16 @@
 				<configuration>
 					<artifactItems>
 						<artifactItem>
-							<groupId>pt.quintans.mda.transformers</groupId>
+							<groupId>pt.quintans</groupId>
 							<artifactId>mda-enterprise-transformer</artifactId>
-							<version>${transformer.version}</version>
+							<type>jar</type>
+							<overWrite>true</overWrite>
+							<outputDirectory>${project.build.directory}</outputDirectory>
+							<includes>**/*.xsd</includes>
+						</artifactItem>
+						<artifactItem>
+							<groupId>pt.quintans</groupId>
+							<artifactId>mda</artifactId>
 							<type>jar</type>
 							<overWrite>true</overWrite>
 							<outputDirectory>${project.build.directory}</outputDirectory>
